# shr-specs

./: Makefile  Makefile.am  configure.ac  shr-specs.pc.in
html/: index.html  org.shr.ophonekitd.CallManagement.html  org.shr.ophonekitd.Contacts.html  org.shr.ophonekitd.Dialer.html  org.shr.ophonekitd.Dialogs.html  org.shr.ophonekitd.Messages.html  org.shr.ophonekitd.PhoneLog.html  org.shr.phonefso.Usage.html  org.shr.phoneui.CallManagement.html  org.shr.phoneui.Contacts.html  org.shr.phoneui.Dialer.html  org.shr.phoneui.Messages.html  org.shr.phoneui.Notification.html  org.shr.phoneui.PhoneLog.html  org.shr.phoneuid.CallManagement.html  org.shr.phoneuid.Contacts.html  org.shr.phoneuid.Dialer.html  org.shr.phoneuid.Dialogs.html  org.shr.phoneuid.Messages.html  org.shr.phoneuid.PhoneLog.html
ophonekitd/: Makefile  docbook-org.shr.ophonekitd.CallManagement.xml  docbook-org.shr.ophonekitd.Contacts.xml  docbook-org.shr.ophonekitd.Dialer.xml  docbook-org.shr.ophonekitd.Dialogs.xml  docbook-org.shr.ophonekitd.Messages.xml  docbook-org.shr.ophonekitd.PhoneLog.xml  org.shr.ophonekitd.CallManagement.xml.in  org.shr.ophonekitd.Contacts.xml.in  org.shr.ophonekitd.Dialer.xml.in  org.shr.ophonekitd.Dialogs.xml.in  org.shr.ophonekitd.Messages.xml.in  org.shr.ophonekitd.PhoneLog.xml.in
org.shr.phonefso/: Makefile  docbook-org.shr.phonefso.Usage.xml  org.shr.phonefso.Usage.xml.in
org.shr.phoneui/: Makefile  docbook-org.shr.phoneui.CallManagement.xml  docbook-org.shr.phoneui.Contacts.xml  docbook-org.shr.phoneui.Dialer.xml  docbook-org.shr.phoneui.Messages.xml  (+16 more)
tools/: makedoc.py  (+1 more)
(+43 files in other folders)
